<resources>
    <string name="app_name">Material</string>

    <string name="action_settings">Settings</string>

    <string name="title_language">编程语言</string>

    <string name="title_login">用户登陆</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="button_login">登 陆</string>

    <string name="comment_date" >2015-10-10</string>
    <string name="commment_info">万圣节去看这片还挺应景。最好看的是片头的长镜和直升机，之后电影就和主题曲一样绵软无力。尤其剧情，真是让人频频扶额，从头到尾还真是两xxx就能解决的事。蕾雅·赛杜挺美就是牙缝在IMAX屏上有点嚣张；本本一直萌，和Craig好几段都基味弥漫；沃尔兹又是来逗逼的。007就是这样，再烂也每部必去看 </string>


    <string name="navigation_book">书籍</string>
    <string name="navigation_example">示例</string>
    <string name="navigation_my_blog">博客</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_movie">电影</string>
    <string name="navigation_movie_rank">北美票房排榜</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="press_again_exit_app">再按一次退出程序</string>

    <string name="app_description">本APP用来演示Material Design控件的使用</string>
    <string name="app_github_url">github地址：\nhttps://github.com/chenyangcun/MaterialDesignExample</string>

    <string name="title_book">书籍</string>

    <string name="rating">1</string>

    <string name="box" >110201201</string>

    <string name="book_title_1">失控</string>
    <string name="book_description_1">作者: [美] 凯文·凯利 \n副标题: 全人类的最终命运和结局 \n出版年: 2010-12 \n页数: 707 \n定价: 88.00元 </string>

    <string name="book_title_2">黑客与画家</string>
    <string name="book_description_2">作者: [美] Paul Graham\n副标题: 硅谷创业之父Paul Graham文集\n出版年: 2011-4\n页数: 264\n定价: 49.00元</string>

    <string name="book_title_3">七周七语言</string>
    <string name="book_description_3">作者: Bruce A.Tate\n副标题: 理解多种编程范型\n出版年: 2012-5-8\n页数: 246\n定价: 59.00元</string>

    <string name="search">搜索</string>
    <string name="input_hint">请输入关键字</string>
    <string name="input_prefill"></string>


    <string name="director">萨姆·门德斯</string>
    <string name="screenWriter">翰·洛根 / 尼尔·珀维斯 
        / 罗伯特·韦德 / 杰斯·巴特沃斯 / 伊恩·弗莱明</string>

    <string name="movieType">动作 / 惊悚 / 冒险</string>
    <string name="Actors">丹尼尔·克雷格 / 克里斯托弗·沃尔兹 / 蕾雅·赛杜 / 本·卫肖 / 娜奥米·哈里斯
        / 戴夫·巴蒂斯塔 / 莫妮卡·贝鲁奇 / 拉尔夫·费因斯 / 斯黛芬妮·西格曼
        / 安德鲁·斯科特 / 罗里·金奈尔 / 内芙·加切夫 / 加斯帕·克里斯滕森
        / 丹尼尔·斯蒂森 / 丹尼尔·韦斯特伍德 / 拉斯科·阿特金斯</string>
    <string name="releaseDate">2015-11-13(中国大陆) / 2015-10-26(英国) / 2015-11-06(美国)</string>
    <string name="MovieSummary">　一个来自过去的加密信息让詹姆斯·邦德开始了一个神秘任务，从墨西哥城到最终的罗马，在那儿他邂逅了美艳的露琪亚·斯琪拉（莫妮卡·贝鲁奇 Monica Bellucci 饰），而她则是一名臭名昭著的意大利黑手党寡妇。邦德潜入到了一个密会中，揭开了一个名叫“幽灵党”的邪恶组织背后的秘密。
　　然而，远在伦敦的国家安全中心的新任负责人马克思·登彼（安德鲁·斯考特 Andrew Scott 饰）怀疑邦德这次行动的目的，并挑战M（拉尔夫·费恩斯 Ralph Fiennes 饰）掌权的军情六处的地位。邦德暗中召集了钱班霓（奈奥米·哈莉斯 Naomi Harries 饰）和Q博士（本·威肖 Ben Whishaw 饰），协助他寻找他宿敌的女儿——玛德琳·斯旺（蕾雅·赛杜 Léa Seydoux 饰）的下落，玛德琳·斯旺手里握有解开幽灵党秘密的线索。作为一名杀手的女儿，斯旺</string>

    <string name="movieDuration">149分钟</string>

    <string name="MainActors">马特·达蒙 连姆·尼森 本·金斯利</string>
    <string name="default_search_keyword">三体</string>

    <string name="title_buttom_tab">Buttom Tab</string>

    <string name="review_title" >我就擦了，这不就是Kingsman里反派吐槽的“那种电影”嘛！</string>
    <string name="review_name" >叉烧包小队长</string>
    <string name="review_info" >当我看到第一批影评出来说这部略差于Skyfall的时候我就觉得药丸，因为我一直觉得Skyfall非常麻麻地，
        唯一亮点就是感谢门导引进了一个年轻的Q，从此开启了随缘热门同人文区的一个新分支，不得不服。
        当我开始看片头之前的墨西哥长镜头的时候我就觉得乙烷，因为很多友邻说这个长镜头是整片的亮点，
        我就跪了，这长镜头太平庸了，毫无意义，跟鸟人什么的就先不比了基本属于欺负人......</string>
    <string name="advise">推荐星级</string>


</resources>
