<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group
        android:checkableBehavior="single"
        android:title="Home items">
        <item
            android:id="@+id/navigation_item_book"
            android:icon="@drawable/ic_book_white"
            android:title="@string/navigation_book" />

        <item
            android:id="@+id/navigation_item_movie"
            android:icon="@drawable/ic_theaters_white_18dp"
            android:title="@string/navigation_movie" />

        <item
            android:id="@+id/navigation_item_music"
            android:icon="@drawable/ic_audiotrack_white_18dp"
            android:title="音乐" />

        <item
            android:id="@+id/navigation_item_picture"
            android:icon="@drawable/ic_picture_in_picture_white_24dp"
            android:title="照片"/>
        <item
            android:id="@+id/navigation_item_example"
            android:icon="@drawable/ic_favorite"
            android:title="@string/navigation_example" />
        <!-- <item
             android:id="@+id/navigation_item_blog"
             android:icon="@drawable/ic_favorite"
             android:title="@string/navigation_my_blog" />-->

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_stars_white_24dp"
            android:title="@string/navigation_about" />

        <item
            android:id="@+id/sub_exit"
            android:icon="@drawable/ic_stars_white_24dp"
            android:title="退出" />

        <!--<item android:title="Sub items">

            <menu>


                <item
                    android:id="@+id/sub_switch"
                    android:icon="@mipmap/ic_action_cc_bcc"
                    android:title="切换主题" />





            </menu>
        </item>-->

    </group>
</menu>