<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingLeft="8dp"
    android:paddingBottom="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivCommentPic"
        android:layout_width="24dp"
        android:src="@drawable/book1"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:id="@+id/tvCommentName"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/primary_text"
                android:layout_height="wrap_content"
                android:text="@string/title_language"/>

            <RatingBar
                android:id="@+id/RatingMovie"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@+id/tvCommentDate"
                android:layout_toStartOf="@+id/tvCommentDate"
                android:layout_marginRight="40dp"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:max="5"
                 />


            <TextView
                android:id="@+id/tvCommentDate"
                android:text="@string/comment_date"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tvCommentInfo"
            android:text="@string/commment_info"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:paddingRight="12dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>